After using CompletableFuture to track locations in parallel: the elapsed time for highVolumeTrackLocation is 3minutes and 43 secondes